--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 <p class="name" style="text-align: center;">
                   Danny Tran
                 </p>
-                <p>I'm an undergraduate Computer Science student at <a href="https://eecs.berkeley.edu/cs/">UC Berkeley</a>
+                <p>I am an incoming PhD student at UT Austin. Prior to this, I was an undergraduate Computer Science student at <a href="https://eecs.berkeley.edu/cs/">UC Berkeley</a>
                 </a> where I had the pleasure of being advised by Professor <a href="https://people.eecs.berkeley.edu/~trevor/">Trevor Darrell</a> and Dr. <a href="https://www.amirbar.net/">Amir Bar</a>. 
                 </p>
                 <p>
@@ -30,7 +30,7 @@
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:trandanny797@gmail.com">Email</a> &nbsp;/&nbsp;
-                  <a href="data/Resume_12_21_24.pdf">CV</a> &nbsp;/&nbsp;
+                  <a href="data/Resume_6_17_25.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?user=azjJi_8AAAAJ&hl=en&oi=sra">Scholar</a> &nbsp;/&nbsp;
                   <a href="https://x.com/dans_t123">Twitter</a> &nbsp;/&nbsp;
                   <a href="https://github.com/DannyTran123">Github</a>
@@ -58,7 +58,7 @@
         <div class="one">
           <div class="two" id="nuvo_image">
             <video width="100%" muted autoplay loop>
-              <source src="images/nwm_teaser.mov" type="video/mp4">
+              <source src="images/nwm_teaser.mp4" type="video/mp4">
               Your browser does not support the video tag.
             </video>
           </div>
@@ -73,7 +73,7 @@
         <br>
         Amir Bar, Gaoyue Zhou, <strong>Danny Tran</strong>, Trevor Darrell, Yann LeCun
         <br>
-        <em>Technical Report</em>, 2024
+        <em>CVPR</em>, 2025 <span style="color:red;">[Best Paper Honorable Mention]</span>
         <br>
         <a href="https://www.amirbar.net/nwm/">project page</a> 
         <!-- /
