--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -322,10 +322,43 @@
 </section>
 <!-- End paper abstract -->
 
+<!-- Why it's hard?-->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3" style="margin-bottom: 2rem;">Why it's hard?</h2>
 
-<!-- Motivation -->
+    <div class="box">
+      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
+        🌀 Action & Vision is Heavily Context Dependent
+      </h2>
+      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
+        <li>Same view can lead to different movements and vice versa — because humans act in complex, embodied, goal-directed environments.</li>
+      </ul>
 
-<!-- Motivation-->
+      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
+        📐 Human Control is High-Dimensional and Structured
+      </h2>
+      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
+        <li>Full-body motion spans 48+ DoF with hierarchical, time-dependent dynamics—not synthetic control codes.</li>
+      </ul>
+
+      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
+        🙈 Egocentric View Reveals Intention—But Hides the Body
+      </h2>
+      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
+        <li>First-person vision reflects goals, but not motion execution—models must infer consequences from invisible physical actions.</li>
+      </ul>
+
+      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
+        🕒 Perception Lags Behind Action
+      </h2>
+      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem;">
+        <li>Visual feedback often comes seconds later, requiring long-horizon prediction and temporal reasoning.</li>
+      </ul>
+    </div>
+  </div>
+</section>
+<!-- Why it's hard?-->
 
 <!-- Following Atomic Actions-->
 <section class="section">
