--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -101,7 +101,18 @@
                   <div class="column has-text-centered">
                     <div class="publication-links">
                   </span>
-
+                  
+                  <!-- ArXiv abstract Link -->
+                <span class="link-block">
+                  <a href="http://arxiv.org/abs/2506.21552" target="_blank"
+                  class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                    <i class="ai ai-arxiv"></i>
+                  </span>
+                  <span>arXiv</span>
+                  </a>
+                </span>
+                  
                   <!-- Github link -->
                   <span class="link-block">
                     <a href="https://github.com/YOUR REPO HERE" target="_blank"
@@ -112,17 +123,6 @@
                     <span>Code</span>
                   </a>
                 </span>
-
-                <!-- ArXiv abstract Link -->
-                <span class="link-block">
-                  <a href="https://arxiv.org/abs/<ARXIV PAPER ID>" target="_blank"
-                  class="external-link button is-normal is-rounded is-dark">
-                  <span class="icon">
-                    <i class="ai ai-arxiv"></i>
-                  </span>
-                  <span>arXiv</span>
-                </a>
-              </span>
             </div>
           </div>
         </div>
@@ -204,7 +204,7 @@
       </h2>
 
       <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        … a real embodied agent…: complex actions.
+        …a real embodied agent…: complex actions.
       </h2>
       <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
         <li>❌ abstract control signals — ⬆️，⬇️，⬅️，➡️</li>
