--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -207,7 +207,7 @@
       </h2>
 
       <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        …a real embodied agent…: complex actions.
+        …a <span style="color: red; font-style: italic; font-weight: bold;">real</span> <span style="font-style: italic; font-weight: bold;">embodied agent...:</span> complex actions.
       </h2>
       <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
         <li>❌ abstract control signals — ⬆️，⬇️，⬅️，➡️</li>
@@ -215,10 +215,10 @@
       </ul>
 
       <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        … that act in the real world: complex scenarios.
+        <span style="font-style: italic; font-weight: bold;">… that act in the</span> <span style="color: red; font-style: italic; font-weight: bold;"> real</span> <span style="font-style: italic; font-weight: bold;">world: </span> complex scenarios.
       </h2>
       <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem;">
-        <li>❌ Ascetic scene, stationary camera</li>
+        <li>❌ Aesthetic scene, stationary camera</li>
         <li>✅ diverse real-life scenario, ego-centric view</li>
       </ul>
     </div>
