--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -52,9 +52,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title">
-              Whole-Body Conditioned<br>
-              Egocentric Video Prediction
+            <h1 class="title is-1 publication-title"  style="white-space: nowrap;">
+              Whole-Body Conditioned Egocentric Video Prediction
             </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
@@ -182,12 +181,11 @@
 
 <section class="section">
   <div class="container is-max-desktop">
-    <h2 class="title is-3">What do we want?</h2>
 
     <!-- Centered gradient title -->
     <div class="section">
       <div class="container has-text-centered">
-        <h2 class="title is-1 gradient-text mb-6">
+        <h2 class="title is-2 gradient-text mb-6">
           A World Model for Embodied Agents
         </h2>
       </div>
