--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -281,7 +281,9 @@
   <div class="container is-max-desktop">
     <h2 class="title is-3">What did we do?</h2>
     <!-- <div class="hero-body"> -->
-      <img src="static/images/what_did_we_do.png" alt="MY ALT TEXT"/>
+      <div style="text-align: center;">
+        <img src="static/images/what_did_we_do.png" alt="MY ALT TEXT" style="width: 60%;" />
+      </div>
         <h2 class="subtitle has-text-centered">
           We trained model (PEVA) on Nymeria Dataset, for Whole-Body-Conditioned Egocentric Prediction.
         </h2>
