--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -201,11 +201,11 @@
 
     <div class="box">
       <h2 class="subtitle has-text-left" style="margin-bottom: 1.5rem;">
-        To create a <span class="gradient-text-reg">World Model for Embodied Agents</span>, we need...
+        <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">To create a </span> <span style="font-size: 1.35rem;" class="gradient-text-reg"> World Model for Embodied Agents</span> <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">, we need...</span>
       </h2>
 
       <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        …a <span style="color: red; font-style: italic; font-weight: bold;">real</span> <span style="font-style: italic; font-weight: bold;">embodied agent...:</span> complex actions.
+        <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">…a</span> <span style="color: red; font-style: italic; font-weight: bold; font-size: 1.35rem;">real</span> <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">embodied agent...:</span> complex actions.
       </h2>
       <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
         <li>❌ abstract control signals — ⬆️，⬇️，⬅️，➡️</li>
@@ -213,7 +213,7 @@
       </ul>
 
       <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        <span style="font-style: italic; font-weight: bold;">… that act in the</span> <span style="color: red; font-style: italic; font-weight: bold;"> real</span> <span style="font-style: italic; font-weight: bold;">world: </span> complex scenarios.
+        <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">… that act in the</span> <span style="color: red; font-style: italic; font-weight: bold; font-size: 1.35rem;"> real</span> <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">world: </span> complex scenarios.
       </h2>
       <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem;">
         <li>❌ Aesthetic scene, stationary camera</li>
