--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -52,8 +52,8 @@
       <div class="container is-max-desktop">
         <div class="columns is-centered">
           <div class="column has-text-centered">
-            <h1 class="title is-1 publication-title"  style="white-space: nowrap;">
-              Whole-Body Conditioned Egocentric Video Prediction
+            <h1 class="title is-1 publication-title">
+              Whole-Body Conditioned <br> Egocentric Video Prediction
             </h1>
             <div class="is-size-5 publication-authors">
               <!-- Paper authors -->
@@ -229,7 +229,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3" style="margin-bottom: 2rem;">
-      Humans as Agents
+      Human, as the most complex agent in the world:
     </h2>
 
     <div class="box">
@@ -255,6 +255,9 @@
       <!-- Whole-body Control to Physicality -->
       <div class="content">
         <h3 class="subtitle has-text-left"><strong>• Whole-body Control -> Physicality</strong></h3>
+        <p class="subtitle has-text-left">
+          When we consider our body movements, we should consider both actions of the feet (locomotion and navigation) and the actions of the hand (manipulation), or more generally, whole-body control.
+        </p>
         <div class="is-flex is-justify-content-center is-align-items-flex-start" style="gap: 2rem; margin-top: 1rem;">
           <div style="text-align: center; width: 170px;">
             <img src="static/images/physicality_feet.png" alt="Feet action" style="height: 140px; object-fit: contain;" />
@@ -280,13 +283,14 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">What did we do?</h2>
-    <!-- <div class="hero-body"> -->
+    <div class="box">
       <div style="text-align: center;">
         <img src="static/images/what_did_we_do.png" alt="MY ALT TEXT" style="width: 60%;" />
       </div>
         <h2 class="subtitle has-text-centered">
-          We trained model (PEVA) on Nymeria Dataset, for Whole-Body-Conditioned Egocentric Prediction.
+          We trained a model, to Predict Egocentric Video from human Actions (<span class="gradient-text">PEVA</span>).
         </h2>
+      </div>
     </div>
   </div>
 </section>
