--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -194,6 +194,18 @@
 </section>
 <!-- What do we want?-->
 
+<!-- Motivation -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3" style="white-space: nowrap;">Motivation</h2>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Motivation -->
+
 <!-- What are the requirements? -->
 <section class="section">
   <div class="container is-max-desktop">
@@ -278,25 +290,6 @@
 </section>
 <!-- Humans as Agents -->
 
-
-<!-- What did we do?-->
-<section class="section">
-  <div class="container is-max-desktop">
-    <h2 class="title is-3">What did we do?</h2>
-    <div class="box">
-      <div style="text-align: center;">
-        <img src="static/images/what_did_we_do.png" alt="MY ALT TEXT" style="width: 60%;" />
-      </div>
-        <h2 class="subtitle has-text-centered">
-          We trained a model, to Predict Egocentric Video from human Actions (<span class="gradient-text">PEVA</span>).
-        </h2>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- What did we do?-->
-
-
 <!-- Paper abstract -->
 <section class="section hero is-light">
   <div class="container is-max-desktop">
@@ -313,6 +306,25 @@
   </div>
 </section>
 <!-- End paper abstract -->
+
+
+<!-- What did we do?-->
+<section class="section">
+  <div class="container is-max-desktop">
+    <h2 class="title is-3">What did we do?</h2>
+    <div class="box">
+      <div style="text-align: center;">
+        <img src="static/images/what_did_we_do.png" alt="MY ALT TEXT" style="width: 60%;" />
+      </div>
+        <h2 class="subtitle has-text-centered">
+          We trained a model, to Predict Egocentric Video from human Actions (<span style="font-size: 1.35rem;" class="gradient-text-reg">PEVA</span>).
+        </h2>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- What did we do?-->
+
 
 <!-- Why it's hard?-->
 <section class="section">
@@ -351,6 +363,18 @@
   </div>
 </section>
 <!-- Why it's hard?-->
+
+<!-- Motivation -->
+<section class="section hero is-light">
+  <div class="container is-max-desktop">
+    <div class="columns is-centered has-text-centered">
+      <div class="column is-four-fifths">
+        <h2 class="title is-3" style="white-space: nowrap;">Results</h2>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Motivation -->
 
 <!-- Following Atomic Actions-->
 <section class="section">
