--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -380,6 +380,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">Following Atomic Actions</h2>
+    <div class="box">
     <h2 class="subtitle has-text-left" style="margin-bottom: 3rem;">
       We demonstrate samples of PEVA following atomic actions.
     </h2>
@@ -408,6 +409,7 @@
       <img src="static/images/atomic_actions_v3/move_right_hand_right.png" alt="MY ALT TEXT" style="margin-bottom: 2rem;"/>
     </div>
   </div>
+</div>
 </section>
 <!-- Following Atomic Actions-->
 
@@ -416,6 +418,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">Long Video Generation</h2>
+    <div class="box">
       <video poster="" id="tree" autoplay controls muted loop height="100%">
         <!-- Your video here -->
         <source src="static/videos/long_seq_v2.mp4"
@@ -426,6 +429,7 @@
       </h2>
     </div>
   </div>
+</div>
 </section>
 <!-- Long Video Generation-->
 
@@ -503,6 +507,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">More Long Video Generation</h2>
+    <div class="box">
     <img id="mainDisplay1" src="static/images/supp_long/id_19.png" class="main-image" alt="Main Display" />
 
     <!-- Thumbnails -->
@@ -581,6 +586,7 @@
       </div>
     </div>
   </div>
+  </div>
 </section>
 
 
@@ -611,6 +617,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">Planning with Multiple Action Candidates</h2>
+    <div class="box">
     <h2 class="subtitle has-text-left">
       We explore PEVA's ability to serve as a world model by demonstrating a planning example by simulating multiple action candidates using PEVA and scoring them based on their perceptual similarity to the goal, as measured by LPIPS. Hover over the video to play.
     </h2>
@@ -628,6 +635,7 @@
       </h2>
     </div>
   </div>
+  </div>
 </section>
 <!-- Planning with Multiple Action Candidates-->
 
@@ -636,6 +644,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">More Attempts with Planning</h2>
+    <div class="box">
     <img id="mainDisplay2" src="static/images/PEVA_CEM_viz/right_id_18.png" class="main-image" alt="Main Display" />
 
     <!-- Thumbnails -->
@@ -660,6 +669,7 @@
       </div>
     </div>
   </div>
+</div>
 </section>
 <!-- More Attempts with Planning-->
 
@@ -668,7 +678,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">Method</h2>
-    <!-- <div class="hero-body"> -->
+    <div class="box">
       <img src="static/images/method.png" alt="MY ALT TEXT" style="margin-bottom: 1rem;"/>
         <h2 class="subtitle has-text-left">
           <strong>Random Timeskips:</strong> It allows the model to learn both short-term motion dynamics and longer-term activity patterns.
@@ -681,6 +691,7 @@
         </h2>
     </div>
   </div>
+  </div>
 </section>
 
 
@@ -688,7 +699,7 @@
 <section class="section">
   <div class="container is-max-desktop">
     <h2 class="title is-3">Quantitative Results</h2>
-
+    <div class="box">
       <h3 class="title is-4 has-text-left">Atomic Action Performance</h3>
       <img src="static/images/atomic_action_quantitative.png" alt="MY ALT TEXT"/>
         <h3 class="subtitle has-text-centered" style="margin-bottom: 4rem;">
@@ -714,6 +725,7 @@
           </h3>
     </div>
   </div>
+</div>
 </section>
 <!-- Quantitative Results-->
 
@@ -730,11 +742,13 @@
 <!-- Acknowledgements-->
 <section class="section">
   <div class="container is-max-desktop">
-    <h2 class="title is-3" style="margin-bottom: 3rem;">Acknowledgements</h2>
+    <h2 class="title is-3">Acknowledgements</h2>
+    <div class="box">
     <h2 class="subtitle has-text-left">
       The authors thank Rithwik Nukala for his help in annotating atomic actions. We thank Katerina Fragkiadaki, Philipp Krähenbühl, Bharath Hariharan, Guanya Shi, Shubham Tsunami and Deva Ramanan for the useful suggestions and feedbacks for improving the paper; Jianbo Shi for the discussion regarding control theory; Yilun Du for the support on Diffusion Forcing; Brent Yi for his help in human motion related works and Alexei Efros for the discussion and debates regarding world models. This work is partially supported by the ONR MURI N00014-21-1-2801.
     </h2>
   </div>
+</div>
 </section>
 <!-- Acknowledgements-->
 
