--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -133,24 +133,6 @@
   </div>
 </section>
 
-
-<!-- Teaser video-->
-<!-- <section class="hero teaser">
-  <div class="container is-max-desktop">
-    <div class="hero-body">
-      <video poster="" id="tree" autoplay controls muted loop height="100%">
-        <source src="static/videos/banner_video.mp4"
-        type="video/mp4">
-      </video>
-      <h2 class="subtitle has-text-centered">
-        Aliquam vitae elit ullamcorper tellus egestas pellentesque. Ut lacus tellus, maximus vel lectus at, placerat pretium mi. Maecenas dignissim tincidunt vestibulum. Sed consequat hendrerit nisl ut maximus. 
-      </h2>
-    </div>
-  </div>
-</section> -->
-<!-- End teaser video -->
-
-
 <!-- What do we want?-->
 <style>
   .gradient-text {
@@ -179,20 +161,23 @@
   }
 </style>
 
-<section class="section">
+<!-- Teaser video-->
+<section class="hero teaser">
   <div class="container is-max-desktop">
-
-    <!-- Centered gradient title -->
-    <div class="section">
-      <div class="container has-text-centered">
-        <h2 class="title is-2 gradient-text mb-6">
+    <div class="hero-body">
+      <div class="has-text-centered">
+        <h2 class="title is-3 gradient-text">
           A World Model for Embodied Agents
         </h2>
       </div>
+      <video poster="" id="tree" controls muted loop height="100%">
+        <source src="static/videos/PEVA_video_720.mp4"
+        type="video/mp4">
+      </video>
     </div>
   </div>
 </section>
-<!-- What do we want?-->
+<!-- End teaser video -->
 
 <!-- Motivation -->
 <section class="section hero is-light">
