--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -59,38 +59,43 @@
               <!-- Paper authors -->
               <div class="authors-line">
                 <span class="author-block">
-                  <a href="https://yutongbai.com/" target="_blank">Yutong Bai<sup>1,*</sup></a>,
+                  <a href="https://yutongbai.com/" target="_blank" style="font-size: 1.65rem;">Yutong Bai<sup>1,*</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://dannytran123.github.io/" target="_blank">Danny Tran<sup>1,*</sup></a>,
+                  <a href="https://dannytran123.github.io/" target="_blank" style="font-size: 1.65rem;">Danny Tran<sup>1,*</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://www.amirbar.net/" target="_blank">Amir Bar<sup>2,*</sup></a>
+                  <a href="https://www.amirbar.net/" target="_blank" style="font-size: 1.65rem;">Amir Bar<sup>2,*</sup></a>
                 </span>
               </div>
 
               <div class="authors-line" style="margin-top: 0.5rem;">
                 <span class="author-block">
-                  <a href="http://yann.lecun.com/" target="_blank">Yann LeCun<sup>2,&dagger;</sup></a>,
+                  <a href="http://yann.lecun.com/" target="_blank" style="font-size: 1.65rem;">Yann LeCun<sup>2,3,&dagger;</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://people.eecs.berkeley.edu/~trevor/" target="_blank">Trevor Darrell<sup>1,&dagger;</sup></a>,
+                  <a href="https://people.eecs.berkeley.edu/~trevor/" target="_blank" style="font-size: 1.65rem;">Trevor Darrell<sup>1,&dagger;</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://people.eecs.berkeley.edu/~malik/" target="_blank">Jitendra Malik<sup>1,&dagger;</sup></a>
+                  <a href="https://people.eecs.berkeley.edu/~malik/" target="_blank" style="font-size: 1.65rem;">Jitendra Malik<sup>1,&dagger;</sup></a>
                 </span>
               </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block">
+                    <span class="author-block" style="font-size: 1.65rem;">
                       <!-- <img src="static/images/BAIR_logo.png" alt="Berkeley logo" style="height: 3em; vertical-align: middle; margin-right: 0.3em;"> -->
                       <sup>1</sup>
                       UC Berkeley (BAIR), 
                     </span>
-                    <span class="author-block">
+                    <span class="author-block" style="font-size: 1.65rem;">
                       <!-- <img src="static/images/Meta_logo.png" alt="Berkeley logo" style="height: 2.7em; vertical-align: middle; margin-left: 0.4em; top: 0.2em; margin-right: 0.3em;"> -->
                       <sup>2</sup>
                       FAIR at Meta
+                    </span>
+                    <span class="author-block" style="font-size: 1.65rem;">
+                      <!-- <img src="static/images/Meta_logo.png" alt="Berkeley logo" style="height: 2.7em; vertical-align: middle; margin-left: 0.4em; top: 0.2em; margin-right: 0.3em;"> -->
+                      <sup>3</sup>
+                      New York University
                     </span>
                     <!-- <span class="author-block">Institution Name<br>In Submission</span> -->
                     <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
@@ -122,7 +127,7 @@
                     <span class="icon">
                       <i class="fab fa-github"></i>
                     </span>
-                    <span>Code</span>
+                    <span>Coming Soon</span>
                   </a>
                 </span>
             </div>
@@ -179,17 +184,6 @@
 </section>
 <!-- End teaser video -->
 
-<!-- Motivation -->
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3" style="white-space: nowrap;">Motivation</h2>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- Motivation -->
 
 <!-- What are the requirements? -->
 <section class="section">
@@ -202,7 +196,7 @@
       </h2>
 
       <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">…a</span> <span style="color: red; font-style: italic; font-weight: bold; font-size: 1.35rem;">real</span> <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">embodied agent...:</span> complex actions.
+        <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">• …a</span> <span style="color: red; font-style: italic; font-weight: bold; font-size: 1.35rem;">real</span> <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">embodied agent...:</span> complex actions.
       </h2>
       <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
         <li>❌ abstract control signals — ⬆️，⬇️，⬅️，➡️</li>
@@ -210,7 +204,7 @@
       </ul>
 
       <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">… that act in the</span> <span style="color: red; font-style: italic; font-weight: bold; font-size: 1.35rem;"> real</span> <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">world: </span> complex scenarios.
+        <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">• … that act in the</span> <span style="color: red; font-style: italic; font-weight: bold; font-size: 1.35rem;"> real</span> <span style="font-style: italic; font-weight: bold; font-size: 1.35rem;">world: </span> complex scenarios.
       </h2>
       <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem;">
         <li>❌ Aesthetic scene, stationary camera</li>
@@ -228,12 +222,7 @@
     <h2 class="title is-3" style="margin-bottom: 2rem;">
       Human, as the most complex agent in the world:
     </h2>
-
     <div class="box">
-      <!-- <h2 class="subtitle has-text-centered" style="margin-bottom: 2rem;">
-        Humans are the most complex agent in the world
-      </h2> -->
-
       <!-- Ego-centric View to Intention -->
       <div class="content" style="margin-bottom: 2rem;">
         <h3 class="subtitle has-text-left"><strong>• Ego-centric view -> Intention</strong></h3>
@@ -275,24 +264,6 @@
 </section>
 <!-- Humans as Agents -->
 
-<!-- Paper abstract -->
-<section class="section hero is-light">
-  <div class="container is-max-desktop">
-    <div class="columns is-centered has-text-centered">
-      <div class="column is-four-fifths">
-        <h2 class="title is-3">Abstract</h2>
-        <div class="content has-text-justified">
-          <p>
-            We train models to <b>P</b>redict <b>E</b>go-centric <b>V</b>ideo from human <b>A</b>ctions (PEVA), given the past video and an action represented by the relative 3D body pose. By conditioning on kinematic pose trajectories, structured by the joint hierarchy of the body, our model learns to simulate how physical human actions shape the environment from a first-person point of view. We train an auto-regressive conditional diffusion transformer on Nymeria, a large-scale dataset of real-world egocentric video and body pose capture. We further design a hierarchical evaluation protocol with increasingly challenging tasks, enabling a comprehensive analysis of the model's embodied prediction and control abilities. Our work represents an initial attempt to tackle the challenges of modeling complex real-world environments and embodied agent behaviors with video prediction from the perspective of a human.
-          </p>
-        </div>
-      </div>
-    </div>
-  </div>
-</section>
-<!-- End paper abstract -->
-
-
 <!-- What did we do?-->
 <section class="section">
   <div class="container is-max-desktop">
@@ -301,8 +272,9 @@
       <div style="text-align: center;">
         <img src="static/images/what_did_we_do.png" alt="MY ALT TEXT" style="width: 60%;" />
       </div>
-        <h2 class="subtitle has-text-centered">
-          We trained a model, to Predict Egocentric Video from human Actions (<span style="font-size: 1.35rem;" class="gradient-text-reg">PEVA</span>).
+        <h2 class="subtitle has-text-left">
+          We trained a model, to Predict Egocentric Video from human Actions (<span style="font-size: 1.35rem;" class="gradient-text-reg">PEVA</span>). <br>
+          By conditioning on kinematic pose trajectories, structured by the joint hierarchy of the body, our model learns to simulate how physical human actions shape the environment from a first-person point of view. We train an auto-regressive conditional diffusion transformer on Nymeria, a large-scale dataset of real-world egocentric video and body pose capture. We further design a hierarchical evaluation protocol with increasingly challenging tasks, enabling a comprehensive analysis of the model's embodied prediction and control abilities. Our work represents an initial attempt to tackle the challenges of modeling complex real-world environments and embodied agent behaviors with video prediction from the perspective of a human.
         </h2>
       </div>
     </div>
@@ -311,43 +283,40 @@
 <!-- What did we do?-->
 
 
-<!-- Why it's hard?-->
+<!-- Why it's Hard -->
 <section class="section">
   <div class="container is-max-desktop">
-    <h2 class="title is-3" style="margin-bottom: 2rem;">Why it's hard?</h2>
-
+    <h2 class="title is-3" style="margin-bottom: 2rem;">
+      Why it's hard?
+    </h2>
     <div class="box">
-      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        🌀 Action & Vision is Heavily Context Dependent
-      </h2>
-      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
-        <li>Same view can lead to different movements and vice versa — because humans act in complex, embodied, goal-directed environments.</li>
-      </ul>
+      <!-- Ego-centric View to Intention -->
+      <div class="content" style="margin-bottom: 2rem;">
+        <h3 class="subtitle has-text-left"><strong>• Action & Vision is Heavily Context Dependent</strong></h3>
+        <p class="subtitle has-text-left">
+          Same view can lead to different movements and vice versa — because humans act in complex, embodied, goal-directed environments.
+        </p>
 
-      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        📐 Human Control is High-Dimensional and Structured
-      </h2>
-      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
-        <li>Full-body motion spans 48+ DoF with hierarchical, time-dependent dynamics—not synthetic control codes.</li>
-      </ul>
+        <h3 class="subtitle has-text-left"><strong>• Human Control is High-Dimensional and Structured</strong></h3>
+        <p class="subtitle has-text-left">
+          Full-body motion spans 48+ DoF with hierarchical, time-dependent dynamics—not synthetic control codes.
+        </p>
 
-      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        🙈 Egocentric View Reveals Intention—But Hides the Body
-      </h2>
-      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem; margin-bottom: 1.5rem;">
-        <li>First-person vision reflects goals, but not motion execution—models must infer consequences from invisible physical actions.</li>
-      </ul>
+        <h3 class="subtitle has-text-left"><strong>• Egocentric View Reveals Intention—But Hides the Body</strong></h3>
+        <p class="subtitle has-text-left">
+          First-person vision reflects goals, but not motion execution—models must infer consequences from invisible physical actions.
+        </p>
 
-      <h2 class="subtitle has-text-left" style="margin-bottom: 0.5rem;">
-        🕒 Perception Lags Behind Action
-      </h2>
-      <ul class="subtitle has-text-left" style="list-style: none; padding-left: 1.5rem;">
-        <li>Visual feedback often comes seconds later, requiring long-horizon prediction and temporal reasoning.</li>
-      </ul>
+        <h3 class="subtitle has-text-left"><strong>• Perception Lags Behind Action</strong></h3>
+        <p class="subtitle has-text-left">
+          Visual feedback often comes seconds later, requiring long-horizon prediction and temporal reasoning.
+        </p>
+      </div>
+      </div>
     </div>
   </div>
 </section>
-<!-- Why it's hard?-->
+<!-- Why it's hard? -->
 
 <!-- Motivation -->
 <section class="section hero is-light">
