--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -82,23 +82,24 @@
               </div>
 
                   <div class="is-size-5 publication-authors">
-                    <span class="author-block" style="font-size: 1.65rem;">
+                    <span class="author-block" style="font-size: 1.4rem;">
                       <!-- <img src="static/images/BAIR_logo.png" alt="Berkeley logo" style="height: 3em; vertical-align: middle; margin-right: 0.3em;"> -->
                       <sup>1</sup>
                       UC Berkeley (BAIR), 
                     </span>
-                    <span class="author-block" style="font-size: 1.65rem;">
+                    <span class="author-block" style="font-size: 1.4rem;">
                       <!-- <img src="static/images/Meta_logo.png" alt="Berkeley logo" style="height: 2.7em; vertical-align: middle; margin-left: 0.4em; top: 0.2em; margin-right: 0.3em;"> -->
                       <sup>2</sup>
                       FAIR at Meta
                     </span>
-                    <span class="author-block" style="font-size: 1.65rem;">
+                    <span class="author-block" style="font-size: 1.4rem;">
                       <!-- <img src="static/images/Meta_logo.png" alt="Berkeley logo" style="height: 2.7em; vertical-align: middle; margin-left: 0.4em; top: 0.2em; margin-right: 0.3em;"> -->
                       <sup>3</sup>
                       New York University
                     </span>
                     <!-- <span class="author-block">Institution Name<br>In Submission</span> -->
-                    <!-- <span class="eql-cntrb"><small><br><sup>*</sup>Indicates Equal Contribution</small></span> -->
+                    <span class="eql-cntrb" style="font-size: 1.4rem;"><small><br><sup>*</sup>Indicates Equal Contribution</small></span>
+                    <span class="eql-cntrb" style="font-size: 1.4rem;"><small><br><sup>&dagger;</sup>Indicates Equal Advising</small></span>
                   </div>
 
                   <div class="is-size-5 has-text-centered">
