--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -689,7 +689,15 @@
   <section class="section" id="BibTeX">
     <div class="container is-max-desktop content">
       <h2 class="title">BibTeX</h2>
-      <pre><code>BibTex Code Here</code></pre>
+      <pre><code>@misc{bai2025wholebodyconditionedegocentricvideo,
+        title={Whole-Body Conditioned Egocentric Video Prediction}, 
+        author={Yutong Bai and Danny Tran and Amir Bar and Yann LeCun and Trevor Darrell and Jitendra Malik},
+        year={2025},
+        eprint={2506.21552},
+        archivePrefix={arXiv},
+        primaryClass={cs.CV},
+        url={https://arxiv.org/abs/2506.21552}, 
+  }</code></pre>
     </div>
 </section>
 <!--End BibTex citation -->
