--- a/PEVA/index.html
+++ b/PEVA/index.html
@@ -59,25 +59,25 @@
               <!-- Paper authors -->
               <div class="authors-line">
                 <span class="author-block">
-                  <a href="https://yutongbai.com/" target="_blank" style="font-size: 1.65rem;">Yutong Bai<sup>1,*</sup></a>,
+                  <a href="https://yutongbai.com/" target="_blank" style="font-size: 1.65rem;">Yutong Bai<sup>*,1</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://dannytran123.github.io/" target="_blank" style="font-size: 1.65rem;">Danny Tran<sup>1,*</sup></a>,
+                  <a href="https://dannytran123.github.io/" target="_blank" style="font-size: 1.65rem;">Danny Tran<sup>*,1</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://www.amirbar.net/" target="_blank" style="font-size: 1.65rem;">Amir Bar<sup>2,*</sup></a>
+                  <a href="https://www.amirbar.net/" target="_blank" style="font-size: 1.65rem;">Amir Bar<sup>*,2</sup></a>
                 </span>
               </div>
 
               <div class="authors-line" style="margin-top: 0.5rem;">
                 <span class="author-block">
-                  <a href="http://yann.lecun.com/" target="_blank" style="font-size: 1.65rem;">Yann LeCun<sup>2,3,&dagger;</sup></a>,
+                  <a href="http://yann.lecun.com/" target="_blank" style="font-size: 1.65rem;">Yann LeCun<sup>&dagger;,2,3</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://people.eecs.berkeley.edu/~trevor/" target="_blank" style="font-size: 1.65rem;">Trevor Darrell<sup>1,&dagger;</sup></a>,
+                  <a href="https://people.eecs.berkeley.edu/~trevor/" target="_blank" style="font-size: 1.65rem;">Trevor Darrell<sup>&dagger;,1</sup></a>,
                 </span>
                 <span class="author-block">
-                  <a href="https://people.eecs.berkeley.edu/~malik/" target="_blank" style="font-size: 1.65rem;">Jitendra Malik<sup>1,&dagger;</sup></a>
+                  <a href="https://people.eecs.berkeley.edu/~malik/" target="_blank" style="font-size: 1.65rem;">Jitendra Malik<sup>&dagger;,1,2</sup></a>
                 </span>
               </div>
 
