nwm code + models

--- a/index.html
+++ b/index.html
@@ -75,10 +75,9 @@
         <br>
         <em>CVPR</em>, 2025 <span style="color:red;">[Best Paper Honorable Mention]</span>
         <br>
-        <a href="https://www.amirbar.net/nwm/">project page</a> 
-        <!-- /
-        <a href="https://github.com/bakhtiararya/EgoPet_dataset_download/">data</a> /
-        <a href="https://github.com/dannyTran123/egopet/">code</a> -->
+        <a href="https://www.amirbar.net/nwm/">project page</a> /
+        <a href="https://github.com/facebookresearch/nwm/">code</a> /
+        <a href="https://huggingface.co/facebook/nwm">models</a>
         <p></p>
         <p>
           We present Navigation World Models. We plan trajectories by using a video world model, enabling planning, conterfactual reasoning, and action. 
